[package]
name = "fui"
version = "0.1.0"
description = "Add form interface to your CLI program."
keywords = ["TUI", "UI", "forms", "CLI", "ncurses", "termion"]
documentation = "https://docs.rs/fui"
authors = ["xliiv <tymoteusz.jankowski@gmail.com>"]
exclude = ["examples/**", "docs/**"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xliiv/fui"

[dependencies]
glob = "0.2"
regex = "0.2"
serde_json = "1.0"

[dependencies.cursive]
version = "0.8"
default-features = false

[features]
default = ["ncurses-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
